--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
 
     compile 'com.google.code.gson:gson:2.6.2'
 
+    compile 'com.couchbase.client:java-client:2.4.1'
+
     testCompile 'junit:junit:4.12'
 }
