--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,14 @@ dependencies {
 
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
-    
+
+    compile 'com.google.android.gms:play-services:10.0.1'
+
+
+    // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
+    // Optional -- Mockito framework
+    testCompile 'org.mockito:mockito-core:1.10.19'
+
 }
+apply plugin: 'com.google.gms.google-services'
