--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 
 def AAVersion = '4.2.0'
@@ -56,12 +68,12 @@ dependencies {
     compile "org.androidannotations:androidannotations-api:$AAVersion"
 
     compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.couchbase.lite:couchbase-lite-android:1.3.1'
 
 
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
     // Optional -- Mockito framework
     testCompile 'org.mockito:mockito-core:1.10.19'
-
 }
 apply plugin: 'com.google.gms.google-services'
