--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 27 13:21:07 WAT 2017
-sdk.dir=C\:\\Users\\S4M37\\AppData\\Local\\Android\\sdk
+#Mon Apr 03 12:01:44 CEST 2017
+sdk.dir=C\:\\Users\\Vyndee\\AppData\\Local\\Android\\android-sdk
