--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "gl4.insat.tn.bigdatamobile"
         minSdkVersion 16
@@ -50,17 +50,17 @@ dependencies {
     // Required -- JUnit 4 framework
     // Optional -- Mockito framework
 
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
 
-    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.google.code.gson:gson:2.7'
 
     compile 'com.couchbase.client:java-client:2.4.1'
 
@@ -70,6 +70,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.couchbase.lite:couchbase-lite-android:1.3.1'
 
+    compile 'com.github.andyxialm:ColorDialog:1.0.0'
 
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
