--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     compile 'com.couchbase.lite:couchbase-lite-android:1.3.1'
 
     compile 'com.github.andyxialm:ColorDialog:1.0.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 
     // Required -- JUnit 4 framework
     testCompile 'junit:junit:4.12'
